# magic_square_of_squares4

./: .gitignore  Cargo.toml  README.md
src/: checkpoints.rs  detection.rs  expander.rs  graph.rs  graph_v2.rs  hashing.rs  magic_sums.rs  main.rs  matching.rs  patterns.rs  shared_vec.rs
