[package]
name = "magic_square_of_squares"
version = "0.1.0"
edition = "2024"

[dependencies]
nohash = "*"
rayon = "*"
bincode = "*"
serde = { version = "*", features = ["derive"] }
primal = "*"
petgraph = "*"
graphviz-rust = { version = "*", optional = true }

[features]
render-graphs = ["graphviz-rust"]
